Service submit result (#5485)
* put clipboard on app head and remove old lib tool.js

* ServiceSubmitResult acceptance test initialized

* "then" step missing

* last step to complete

* last method completed

* attribute's name changed and getPropertyFromAHostAndService function name changed

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -199,6 +199,11 @@ default:
       contexts:
       - ContactGroupConfigurationContext
 
+    host_duplication_check:
+      paths: [ %paths.base%/features/HostDuplicationCheck.feature ]
+      contexts:
+      - HostDuplicationCheckContext
+
     contact_group_creation_duplication:
       paths: [ %paths.base%/features/ContactGroupCreationDuplication.feature ]
       contexts:
@@ -313,3 +318,9 @@ default:
       paths: [ %paths.base%/features/MetaServiceConfiguration.feature ]
       contexts:
       - MetaServiceConfigurationContext
+
+
+    service_submit_result:
+      paths: [ %paths.base%/features/ServiceSubmitResult.feature ]
+      contexts:
+      - ServiceSubmitResultContext
