--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -324,3 +324,7 @@ default:
       paths: [ %paths.base%/features/ServiceSubmitResult.feature ]
       contexts:
       - ServiceSubmitResultContext
+    host_dependency_configuration:
+      paths: [ %paths.base%/features/HostDependencyConfiguration.feature ]
+      contexts:
+      - HostDependencyConfigurationContext
