Feature host group dependency (#5530)
* Select2 fixed

* New feature HostGroupDependency

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -310,10 +310,16 @@ default:
       - MetaServiceConfigurationContext
 
 
+    host_group_dependency_configuration:
+      paths: [ %paths.base%/features/HostGroupDependencyConfiguration.feature ]
+      contexts:
+      - HostGroupDependencyConfigurationContext
+
     service_submit_result:
       paths: [ %paths.base%/features/ServiceSubmitResult.feature ]
       contexts:
       - ServiceSubmitResultContext
+      
     host_dependency_configuration:
       paths: [ %paths.base%/features/HostDependencyConfiguration.feature ]
       contexts:
