New feature serviceGroupDependency (#5537)
* New feature serviceGroup

* behat added

* Feature corrected

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -324,3 +324,8 @@ default:
       paths: [ %paths.base%/features/HostDependencyConfiguration.feature ]
       contexts:
       - HostDependencyConfigurationContext
+
+    service_group_dependency_configuration:
+      paths: [ %paths.base%/features/ServiceGroupDependencyConfiguration.feature ]
+      contexts:
+      - ServiceGroupDependencyConfigurationContext
