--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -338,3 +338,13 @@ default:
       paths: [ %paths.base%/features/VendorConfiguration.feature ]
       contexts:
       - VendorConfigurationContext
+
+    first_notification_delay:
+      paths: [ %paths.base%/features/FirstNotificationDelay.feature ]
+      contexts:
+        - FirstNotificationDelayContext
+
+    meta_service_dependency_configuration:
+      paths: [ %paths.base%/features/MetaServiceDependencyConfiguration.feature ]
+      contexts:
+      - MetaServiceDependencyConfigurationContext
