test(admin): Acceptance test for the proxy configuration button An Acceptance test as following:
Scenario: Proxy settings with a correct connexion

Scenario: Proxy settings with a wrong connexion

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -294,3 +294,7 @@ default:
     meta_service_dependency_configuration:
       paths: [ %paths.base%/features/MetaServiceDependencyConfiguration.feature ]
       contexts: [ MetaServiceDependencyConfigurationContext ]
+    
+    test_proxy_configuration:
+      paths: [ %paths.base%/features/TestProxyConfiguration.feature ]
+      contexts: [ TestProxyConfigurationContext ]
