feat(test): add new test stage (critical tests) in Jenkinsfile.
This will allow critical features to be tested first and more quickly
than with the entire test set.

--- a/centreon/Jenkinsfile
+++ b/centreon/Jenkinsfile
@@ -114,11 +114,11 @@ try {
     }
   }
 
-  stage('Acceptance tests') {
+  stage('Critical tests') {
     parallel 'centos6': {
       node {
         sh 'cd /opt/centreon-build && git pull && cd -'
-        sh '/opt/centreon-build/jobs/web/3.5/mon-web-acceptance.sh centos6'
+        sh '/opt/centreon-build/jobs/web/3.5/mon-web-acceptance.sh centos6 @critical'
         step([
           $class: 'XUnitBuilder',
           thresholds: [
@@ -133,7 +133,7 @@ try {
     'centos7': {
       node {
         sh 'cd /opt/centreon-build && git pull && cd -'
-        sh '/opt/centreon-build/jobs/web/3.5/mon-web-acceptance.sh centos7'
+        sh '/opt/centreon-build/jobs/web/3.5/mon-web-acceptance.sh centos7 @critical'
         step([
           $class: 'XUnitBuilder',
           thresholds: [
@@ -146,11 +146,47 @@ try {
       }
     }
     if ((currentBuild.result ?: 'SUCCESS') != 'SUCCESS') {
-      error('Acceptance tests stage failure.');
+      error('Critical tests stage failure.');
     }
   }
 
   if (env.BRANCH_NAME == 'master') {
+    stage('Acceptance tests') {
+      parallel 'centos6': {
+        node {
+          sh 'cd /opt/centreon-build && git pull && cd -'
+          sh '/opt/centreon-build/jobs/web/3.5/mon-web-acceptance.sh centos6 ~@critical'
+          step([
+            $class: 'XUnitBuilder',
+            thresholds: [
+              [$class: 'FailedThreshold', failureThreshold: '0'],
+              [$class: 'SkippedThreshold', failureThreshold: '0']
+            ],
+            tools: [[$class: 'JUnitType', pattern: 'xunit-reports/**/*.xml']]
+          ])
+          archiveArtifacts allowEmptyArchive: true, artifacts: 'acceptance-logs/*.txt, acceptance-logs/*.png'
+        }
+      },
+      'centos7': {
+        node {
+          sh 'cd /opt/centreon-build && git pull && cd -'
+          sh '/opt/centreon-build/jobs/web/3.5/mon-web-acceptance.sh centos7 ~@critical'
+          step([
+            $class: 'XUnitBuilder',
+            thresholds: [
+              [$class: 'FailedThreshold', failureThreshold: '0'],
+              [$class: 'SkippedThreshold', failureThreshold: '0']
+            ],
+            tools: [[$class: 'JUnitType', pattern: 'xunit-reports/**/*.xml']]
+          ])
+          archiveArtifacts allowEmptyArchive: true, artifacts: 'acceptance-logs/*.txt, acceptance-logs/*.png'
+        }
+      }
+      if ((currentBuild.result ?: 'SUCCESS') != 'SUCCESS') {
+        error('Critical tests stage failure.');
+      }
+    }
+
     stage('Delivery') {
       node {
         sh 'cd /opt/centreon-build && git pull && cd -'
