--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -121,6 +121,10 @@ default:
       paths: [ %paths.base%/features/Broker.feature ]
       contexts: [ BrokerContext ]
 
+    broker_configuration:
+      paths: [ %paths.base%/features/BrokerConfiguration.feature ]
+      contexts: [ BrokerConfigurationContext ]
+
     ldap:
       paths: [ %paths.base%/features/Ldap.feature ]
       contexts: [ LdapContext ]
