feat(front): display links in output and comments (#6113)
* fix(front): render link in detailed page, comments and downtimes

* fix(lib): add linkify lib to rendre links

* test(acceptance): add acceptance tests for link on service output

* test(acceptance): add acceptance tests for comments

* Update URI.feature

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -318,3 +318,7 @@ default:
     traps_snmp_group_configuration:
       paths: [ %paths.base%/features/TrapsSNMPGroupConfiguration.feature ]
       contexts: [ TrapsSNMPGroupConfigurationContext ]
+
+    uri:
+      paths: [ %paths.base%/features/URI.feature ]
+      contexts: [ URIContext ]
