chore(build): escape dollar in regexp in jenkinsfile (#6200)

--- a/centreon/Jenkinsfile
+++ b/centreon/Jenkinsfile
@@ -204,7 +204,7 @@ try {
     build job: 'des-mbi-bundle-centos7', wait: false
   }
 } catch(e) {
-  if (env.BRANCH_NAME == 'master' && !(${e} =~ /^.+FlowInterruptedException$/)) {
+  if (env.BRANCH_NAME == 'master' && !(${e} =~ /^.+FlowInterruptedException\$/)) {
     slackSend channel: "#monitoring-metrology",
         color: "#F30031",
         message: "*FAILURE*: `CENTREON WEB` <${env.BUILD_URL}|build #${env.BUILD_NUMBER}> on branch ${env.BRANCH_NAME}\n" +
