chore(build): update Jenkinsfile.

--- a/centreon/Jenkinsfile
+++ b/centreon/Jenkinsfile
@@ -1,10 +1,10 @@
 stage('Source') {
   node {
-    sh 'cd /opt/centreon-build && git pull && cd -'
+    sh 'setup_centreon_build.sh'
     dir('centreon-web') {
       checkout scm
     }
-    sh '/opt/centreon-build/jobs/web/3.5/mon-web-source.sh'
+    sh './centreon-build/jobs/web/3.5/mon-web-source.sh'
     source = readProperties file: 'source.properties'
     env.VERSION = "${source.VERSION}"
     env.RELEASE = "${source.RELEASE}"
@@ -15,8 +15,8 @@ try {
   stage('Unit tests') {
     parallel 'centos7': {
       node {
-        sh 'cd /opt/centreon-build && git pull && cd -'
-        sh '/opt/centreon-build/jobs/web/3.5/mon-web-unittest.sh centos7'
+        sh 'setup_centreon_build.sh'
+        sh './centreon-build/jobs/web/3.5/mon-web-unittest.sh centos7'
         step([
           $class: 'XUnitBuilder',
           thresholds: [
@@ -41,8 +41,8 @@ try {
     },
     'debian9': {
       node {
-        sh 'cd /opt/centreon-build && git pull && cd -'
-        sh '/opt/centreon-build/jobs/web/3.5/mon-web-unittest.sh debian9'
+        sh 'setup_centreon_build.sh'
+        sh './centreon-build/jobs/web/3.5/mon-web-unittest.sh debian9'
         step([
           $class: 'XUnitBuilder',
           thresholds: [
@@ -61,14 +61,14 @@ try {
   stage('Package') {
     parallel 'centos7': {
       node {
-        sh 'cd /opt/centreon-build && git pull && cd -'
-        sh '/opt/centreon-build/jobs/web/3.5/mon-web-package.sh centos7'
+        sh 'setup_centreon_build.sh'
+        sh './centreon-build/jobs/web/3.5/mon-web-package.sh centos7'
       }
     },
     'debian9': {
       node {
-        sh 'cd /opt/centreon-build && git pull && cd -'
-        sh '/opt/centreon-build/jobs/web/3.5/mon-web-package.sh debian9'
+        sh 'setup_centreon_build.sh'
+        sh './centreon-build/jobs/web/3.5/mon-web-package.sh debian9'
       }
     }
     if ((currentBuild.result ?: 'SUCCESS') != 'SUCCESS') {
@@ -79,8 +79,8 @@ try {
   stage('Bundle') {
     parallel 'centos7': {
       node {
-        sh 'cd /opt/centreon-build && git pull && cd -'
-        sh '/opt/centreon-build/jobs/web/3.5/mon-web-bundle.sh centos7'
+        sh 'setup_centreon_build.sh'
+        sh './centreon-build/jobs/web/3.5/mon-web-bundle.sh centos7'
       }
     }
     if ((currentBuild.result ?: 'SUCCESS') != 'SUCCESS') {
@@ -91,8 +91,8 @@ try {
   stage('Critical tests') {
     parallel 'centos7': {
       node {
-        sh 'cd /opt/centreon-build && git pull && cd -'
-        sh '/opt/centreon-build/jobs/web/3.5/mon-web-acceptance.sh centos7 @critical'
+        sh 'setup_centreon_build.sh'
+        sh './centreon-build/jobs/web/3.5/mon-web-acceptance.sh centos7 @critical'
         step([
           $class: 'XUnitBuilder',
           thresholds: [
@@ -113,8 +113,8 @@ try {
     stage('Acceptance tests') {
       parallel 'centos7': {
         node {
-          sh 'cd /opt/centreon-build && git pull && cd -'
-          sh '/opt/centreon-build/jobs/web/3.5/mon-web-acceptance.sh centos7 ~@critical'
+          sh 'setup_centreon_build.sh'
+          sh './centreon-build/jobs/web/3.5/mon-web-acceptance.sh centos7 ~@critical'
           step([
             $class: 'XUnitBuilder',
             thresholds: [
@@ -133,8 +133,8 @@ try {
 
     stage('Delivery') {
       node {
-        sh 'cd /opt/centreon-build && git pull && cd -'
-        sh '/opt/centreon-build/jobs/web/3.5/mon-web-delivery.sh'
+        sh 'setup_centreon_build.sh'
+        sh './centreon-build/jobs/web/3.5/mon-web-delivery.sh'
       }
       if ((currentBuild.result ?: 'SUCCESS') != 'SUCCESS') {
         error('Delivery stage failure.');
