chore(build): use internal instead of packagist

--- a/centreon/composer.json
+++ b/centreon/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "repositories": [
-        { "type": "composer", "url": "https://packagist.centreon.com" }
+        { "packagist.org": false },
+        { "type": "composer", "url": "http://ci.int.centreon.com" }
     ],
     "config": {
         "secure-http": false
