feat(base): add structure of Centreon Remote component
Resolve CP7M-179

--- a/centreon/composer.json
+++ b/centreon/composer.json
@@ -38,7 +38,8 @@
     },
     "autoload": {
         "psr-4": {
-            "CentreonLegacy\\": "src/CentreonLegacy/"
+            "CentreonLegacy\\": "src/CentreonLegacy/",
+            "CentreonRemote\\": "src/CentreonRemote/"
         },
         "files" : [
             "GPL_LIB/smarty-plugins/block.t.php",
