feat: new header

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -326,3 +326,23 @@ default:
     uri:
       paths: [ %paths.base%/features/URI.feature ]
       contexts: [ URIContext ]
+
+    newheaderfeatureflipping:
+      paths: [ %paths.base%/features/NewHeaderFeatureFlipping.feature ]
+      contexts: [ NewHeaderFeatureFlippingContext ]
+
+    topcounterprofilemenu:
+      paths: [ %paths.base%/features/TopCounterProfileMenu.feature ]
+      contexts: [ TopCounterProfileMenuContext ]
+
+    topcounterservice:
+      paths: [ %paths.base%/features/TopCounterServices.feature ]
+      contexts: [ TopCounterServicesContext ]
+
+    topcounterhost:
+      paths: [ %paths.base%/features/TopCounterHosts.feature ]
+      contexts: [ TopCounterHostsContext ]
+
+    topcounterpoller:
+      paths: [ %paths.base%/features/TopCounterPollers.feature ]
+      contexts: [ TopCounterPollersContext ]
