--- a/centreon/package.json
+++ b/centreon/package.json
@@ -67,7 +67,8 @@
     "styled-components": "^3.1.5"
   },
   "jest": {
-    "testResultsProcessor": "jest-junit"
+    "testResultsProcessor": "jest-junit",
+    "testURL": "http://localhost/"
   },
   "jest-junit": {
     "suiteName": "jest tests",
