--- a/centreon/.gitignore
+++ b/centreon/.gitignore
@@ -12,3 +12,5 @@ www/img/media/*
 www/install/install.conf.php
 config/centreon.config.php
 *-dev.yml
+www/include/core/menu/templates/*.js
+www/include/core/menu/templates/*.tpl
