--- a/centreon/package.json
+++ b/centreon/package.json
@@ -7,6 +7,7 @@
     "build": "webpack --mode production",
     "test": "jest --watch --colors",
     "test:build": "jest --ci --coverage",
+    "centreon-build": "cd ./www/front_src/ && npm install && npm run build",
     "centreon-new" : "cd ./www/front_src/ && npm install && npm run start",
     "centreon-start" : "cd ./www/front_src/ && npm run start"
   },
