--- a/centreon/www/front_src/package.json
+++ b/centreon/www/front_src/package.json
@@ -7,7 +7,9 @@
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "html-webpack-plugin": "^3.2.0"
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.8"
   },
   "dependencies": {
     "axios": "^0.18.0",
