--- a/centreon/www/front_src/package.json
+++ b/centreon/www/front_src/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
     "react-scripts": "1.1.4",
+    "react-select": "^2.0.0",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
     "redux-logger": "^3.0.6",
@@ -34,7 +35,7 @@
     "dev": "PUBLIC_URL=\"/centreon/\" webpack --progress --watch",
     "build": "PUBLIC_URL=\"/centreon/\" webpack --mode production",
     "start": "PUBLIC_URL=\"/centreon/\" webpack --progress --watch",
-    "build:sass": "node-sass -r --output-style compressed src/App.scss -o ./src",
+    "build:sass": "node-sass -r --output-style compressed ./src -o ./src",
     "watch:sass": "npm run build:sass && npm run build:sass -- -w",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
