--- a/centreon/package.json
+++ b/centreon/package.json
@@ -7,8 +7,9 @@
     "build": "webpack --mode production",
     "test": "jest --watch --colors",
     "test:build": "jest --ci --coverage",
-    "centreon-new" : "cd ./www/front_src/ && npm install && npm run start",
-    "centreon-start" : "cd ./www/front_src/ && npm run start"
+    "centreon-build": "cd ./www/front_src/ && npm install && npm run build && npm prune --production",
+    "centreon-new": "cd ./www/front_src/ && npm install && npm run start",
+    "centreon-start": "cd ./www/front_src/ && npm run start"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -39,7 +40,6 @@
     "react-test-renderer": "^16.3.1",
     "redux-mock-store": "^1.5.1",
     "style-loader": "^0.20.2",
-    "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.3",
