--- a/centreon/www/front_src/package.json
+++ b/centreon/www/front_src/package.json
@@ -24,7 +24,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
-    "react-scripts": "1.1.4",
+    "react-scripts": "2.0.0-next.a671462c",
     "react-select": "^2.0.0",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
