--- a/centreon/www/front_src/package.json
+++ b/centreon/www/front_src/package.json
@@ -8,6 +8,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.3",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8"
   },
