fix(conf): allow multiple loading of etc's centreon.conf.php to prevent missing DI services

--- a/centreon/config/centreon.config.php.template
+++ b/centreon/config/centreon.config.php.template
@@ -18,7 +18,7 @@ foreach ($constants as $name => $value) {
 }
 
 if (file_exists(_CENTREON_ETC_ . '/centreon.conf.php')) {
-    require_once _CENTREON_ETC_ . '/centreon.conf.php';
+    require _CENTREON_ETC_ . '/centreon.conf.php';
 
     if (!defined('hostCentreon')) {
         define('hostCentreon', $conf_centreon['hostCentreon']);
