introduce front asset installer v1

--- a/centreon/.gitignore
+++ b/centreon/.gitignore
@@ -15,6 +15,7 @@ config/centreon.config.php
 www/include/core/menu/templates/*.js
 www/include/core/menu/templates/*.tpl
 /www/static
+/www/template
 /www/install
 /www/_install
 /filesGeneration/export
