--- a/centreon/package.json
+++ b/centreon/package.json
@@ -8,7 +8,7 @@
     "test": "jest --watch --colors",
     "test:build": "jest --ci --coverage",
     "centreon-build": "cd ./www/front_src/ && npm install && npm run build && npm prune --production",
-    "centreon-new": "cd ./www/front_src/ && npm install && npm run start",
+    "centreon-new": "cd ./www/ && rm -rf static && rm -rf template && cd ./front_src/ && && npm install && npm run build && cd ../ && mv static template",
     "centreon-start": "cd ./www/ && rm -rf static && rm -rf template && cd ./front_src/ && npm run build && cd ../ && mv static template"
   },
   "devDependencies": {
