--- a/centreon/composer.json
+++ b/centreon/composer.json
@@ -42,6 +42,7 @@
         "psr-4": {
             "CentreonLegacy\\": "src/CentreonLegacy/",
             "CentreonRemote\\": "src/CentreonRemote/",
+            "CentreonBam\\": "src/CentreonBam/",
             "Centreon\\": "src/Centreon/"
         },
         "files" : [
