react-copy-to-clipboard

--- a/centreon/package.json
+++ b/centreon/package.json
@@ -59,7 +59,8 @@
     "moment-timezone": "^0.5.14",
     "numeral": "^2.0.6",
     "prop-types": "^15.6.1",
-    "react": "^16.4.1",
+    "react": "^16.5.2",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-favicon": "0.0.14",
     "react-full-screen": "^0.2.3",
