--- a/centreon/www/front_src/package.json
+++ b/centreon/www/front_src/package.json
@@ -21,6 +21,8 @@
     "numeral": "^2.0.6",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-favicon": "0.0.14",
+    "react-full-screen": "^0.2.3",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
