--- a/centreon/composer.json
+++ b/centreon/composer.json
@@ -53,7 +53,8 @@
             "www/lib/HTML/QuickForm/select2.php",
             "www/lib/HTML/QuickForm/advmultiselect.php",
             "www/lib/HTML/QuickForm/tags.php",
-            "www/lib/HTML/QuickForm/customcheckbox.php"
+            "www/lib/HTML/QuickForm/customcheckbox.php",
+            "www/class/centreon-clapi/centreonACL.class.php"
         ]
     }
 }
