--- a/centreon/package.json
+++ b/centreon/package.json
@@ -1,78 +1,46 @@
 {
   "name": "centreon",
-  "version": "2.8.10",
-  "description": "React Integration",
+  "version": "18.10.0",
+  "description": "centreon web package",
   "scripts": {
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production",
-    "test": "jest --watch --colors",
-    "test:build": "jest --ci --coverage",
-    "centreon-build": "npm run build:sass && cd ./www/ && rm -rf static && rm -rf template && cd ./front_src/ && npm install && npm run build && npm prune --production && cd ../ && mv static template",
-    "centreon-new": "cd ./www/ && rm -rf static && rm -rf template && cd ./front_src/ && npm install && npm run build && cd ../ && mv static template",
-    "centreon-start": "cd ./www/ && rm -rf static && rm -rf template && cd ./front_src/ && npm run build && cd ../ && mv static template",
-    "watch:sass": "cd ./www/front_src && npm run build:sass && npm run build:sass -- -w",
-    "build:sass": "cd ./www/front_src && node-sass -r --output-style compressed ./src -o ./src"
+    "build": "npm run build:clean && npm run build:sass && npm run build:app && npm run build:post",
+    "build:clean": "rm -rf www/static && rm -rf www/template",
+    "build:sass": "node-sass -r --output-style compressed ./www/front_src/src -o ./www/front_src/src",
+    "build:app": "cd ./www/front_src && PUBLIC_URL=\"/_CENTREON_PATH_PLACEHOLDER_/\" webpack --mode production",
+    "build:post": "mv ./www/static ./www/template"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-jest": "^22.4.3",
-    "babel-loader": "^7.1.2",
-    "babel-minify-webpack-plugin": "^0.3.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.18",
-    "css-loader": "^0.28.10",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.3",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.9",
+    "@babel/core": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^22.4.3",
-    "jest-junit": "^3.7.0",
-    "less": "^3.0.1",
-    "less-loader": "^4.0.5",
     "node-sass": "^4.9.3",
-    "react-test-renderer": "^16.3.1",
-    "redux-mock-store": "^1.5.1",
-    "style-loader": "^0.20.2",
     "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.3",
-    "webpack-merge": "^4.1.2"
+    "webpack-cli": "^3.0.8"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "@material-ui/core": "^1.5.0",
-    "@material-ui/icons": "^2.0.3",
     "axios": "^0.18.0",
-    "express": "^4.16.2",
-    "lodash": "^4.17.5",
-    "moment": "^2.21.0",
-    "moment-timezone": "^0.5.14",
+    "class-name": "^0.1.3",
+    "cross-env": "^5.2.0",
+    "loaders.css": "^0.1.2",
+    "moment-timezone": "^0.5.21",
     "numeral": "^2.0.6",
-    "prop-types": "^15.6.1",
-    "react": "^16.5.2",
-    "react-dom": "^16.4.1",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-favicon": "0.0.14",
     "react-full-screen": "^0.2.3",
-    "react-moment": "^0.7.0",
-    "react-popper": "^0.10.4",
-    "react-portal": "^4.1.5",
+    "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "reactstrap": "^6.0.1",
-    "redux": "^3.7.2",
+    "react-router-redux": "^5.0.0-alpha.8",
+    "react-scripts": "2.0.0-next.a671462c",
+    "react-select": "^2.0.0",
+    "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
-    "styled-components": "^3.1.5"
+    "redux-thunk": "^2.3.0"
   },
   "jest": {
     "testResultsProcessor": "jest-junit",
