fix(ui): Fullscreen functionality fixes. IE compatibility fix. (#6692)
add package-lock

--- a/centreon/package.json
+++ b/centreon/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^16.4.2",
     "react-favicon": "0.0.14",
     "react-full-screen": "^0.2.3",
+    "react-fullscreen-crossbrowser": "^1.0.9",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
