--- a/centreon/package.json
+++ b/centreon/package.json
@@ -28,6 +28,7 @@
     "loaders.css": "^0.1.2",
     "moment-timezone": "^0.5.21",
     "numeral": "^2.0.6",
+    "query-string": "^6.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-favicon": "0.0.14",
