add dom serializer module to package json (#6732)

--- a/centreon/package.json
+++ b/centreon/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.18.0",
     "class-name": "^0.1.3",
     "cross-env": "^5.2.0",
+    "dom-serializer": "^0.1.0",
     "loaders.css": "^0.1.2",
     "moment-timezone": "^0.5.21",
     "numeral": "^2.0.6",
