clean(code): remove useless files (legacy menu + compiled files) (#6767)

--- a/centreon/.gitignore
+++ b/centreon/.gitignore
@@ -1,8 +1,7 @@
 .idea/
-/nbproject/private/
 nbproject/
 node_modules/
-/vendor/
+vendor/
 composer.lock
 GPL_LIB/SmartyCache/*
 www/install/tmp/*
@@ -12,14 +11,10 @@ www/img/media/*
 www/install/install.conf.php
 config/centreon.config.php
 *-dev.yml
-www/include/core/menu/templates/*.js
-www/include/core/menu/templates/*.tpl
-/www/static
-/www/template
-/www/install
-/www/_install
-/filesGeneration/export
-/www/asset-manifest.json
-/www/front_src/src/App.css
-/www/index.html
-/www/service-worker.js
+filesGeneration/export
+www/static
+www/template
+www/asset-manifest.json
+www/front_src/src/App.css
+www/index.html
+www/service-worker.js
