Updates to remote (#6824)
* updates to remote init
* remove php executable from script
* fix(api): readd trim to get centreon_path
* fix(centcore): use internal call
* remove _instance_id from CfgResourceRepository:export
* restore _instance_id in CfgResourceRepository:export and remove it from import
* fix(clapi): add missing slash in url
* fix(remote): cfg_resource export and PHP warnings in export, manifest and commitment class
* fix(centcore): fixe some logs error and debug
* fix(remote): add export directory to worktree and change owner to be apache user and group
* fix(remote): replace placeholders with macros values
* fix(remote): replace of placeholders
* fix(remote): add more information for debuging of clapi services related with remote server
* apply in progress task status
* fix(remote): add datetime and task information for CentreonWorker::processQueue
* fix(remote): update owner of export directory

--- a/centreon/.gitignore
+++ b/centreon/.gitignore
@@ -11,10 +11,13 @@ www/img/media/*
 www/install/install.conf.php
 config/centreon.config.php
 *-dev.yml
-filesGeneration/export
 www/static
 www/template
 www/asset-manifest.json
 www/front_src/src/App.css
 www/index.html
 www/service-worker.js
+www/include/core/menu/templates/*.js
+www/include/core/menu/templates/*.tpl
+!filesGeneration/export/.keep
+filesGeneration/export/*
