chore(build): add SonarQube analysis.

--- a/centreon/Jenkinsfile
+++ b/centreon/Jenkinsfile
@@ -32,6 +32,11 @@ try {
           useDeltaValues: true,
           failedNewAll: '0'
         ])
+        if (env.BRANCH_NAME == 'master') {
+          withSonarQubeEnv('SonarQube') {
+            sh './centreon-build/jobs/web/18.10/mon-web-analysis.sh'
+          }
+        }
       }
 //    },
 //    'debian9': {
