--- a/centreon/sonar-project.properties
+++ b/centreon/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=centreon-web-18.10
-sonar.projectName=Centreon Web
+sonar.projectName=Centreon Web 18.10
 sonar.sources=.
 sonar.php.tests.reportPath=ut.xml
 sonar.php.coverage.reportPaths=coverage.xml
