--- a/centreon/sonar-project.properties
+++ b/centreon/sonar-project.properties
@@ -3,3 +3,4 @@ sonar.projectName=Centreon Web 18.10
 sonar.sources=.
 sonar.php.tests.reportPath=ut.xml
 sonar.php.coverage.reportPaths=coverage.xml
+sonar.exclusions=features/**
