Mbi 83 add new select element (#7034)
* feature(forms): add new select type

* add new select element

* remove unused comment

* feature(forms): add new select type

* add new select element

* remove unused comment

* autoload new select

* fix(modules): run modules upgrade scripts properly

--- a/centreon/composer.json
+++ b/centreon/composer.json
@@ -54,6 +54,7 @@
             "www/lib/HTML/QuickForm/advmultiselect.php",
             "www/lib/HTML/QuickForm/tags.php",
             "www/lib/HTML/QuickForm/customcheckbox.php",
+            "www/lib/HTML/QuickForm/selectoptgroup.php",
             "www/class/centreon-clapi/centreonACL.class.php"
         ]
     }
