test(dependencies): add vfs to dev dependencies in composer.json

--- a/centreon/composer.json
+++ b/centreon/composer.json
@@ -24,7 +24,8 @@
         "phing/phing": "^2.13",
         "behat/mink-extension": "^2.2",
         "behat/mink-selenium2-driver": "^1.3",
-        "centreon/centreon-test-lib": "dev-master"
+        "centreon/centreon-test-lib": "dev-master",
+        "adlawson/vfs": "^0.12.1"
     },
     "require": {
         "php": ">=7.1.3",
