--- a/centreon/composer.json
+++ b/centreon/composer.json
@@ -19,9 +19,9 @@
     "require-dev": {
         "behat/behat": "^3.3",
         "behat/mink": "^1.7",
-        "phpunit/phpunit": "^4.8",
+        "phpunit/phpunit": "^5.7",
         "squizlabs/php_codesniffer": "^2.9",
-        "phing/phing": "^2.13",
+        "phing/phing": "^2.16",
         "behat/mink-extension": "^2.2",
         "behat/mink-selenium2-driver": "^1.3",
         "centreon/centreon-test-lib": "dev-master",
@@ -46,6 +46,7 @@
             "CentreonBam\\": "src/CentreonBam/",
             "Centreon\\": "src/Centreon/"
         },
+        "classmap": ["www/class/"],
         "files" : [
             "GPL_LIB/smarty-plugins/block.t.php",
             "www/api/class/webService.class.php",
